# lottttto

./: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/lottttto/miner/: LotttttoApp.kt  MainActivity.kt
app/src/main/java/com/lottttto/miner/components/: StatRow.kt
app/src/main/java/com/lottttto/miner/models/: CoinType.kt  MiningConditions.kt  Transaction.kt
app/src/main/java/com/lottttto/miner/navigation/: NavGraph.kt
app/src/main/java/com/lottttto/miner/repositories/: MiningRepository.kt  PinRepository.kt  PoolRepository.kt  SettingsRepository.kt  WalletRepository.kt
app/src/main/java/com/lottttto/miner/screens/auth/: EnterPinScreen.kt  SetPinScreen.kt
app/src/main/java/com/lottttto/miner/screens/main/: MainScreen.kt
app/src/main/java/com/lottttto/miner/screens/mining/: MiningScreen.kt
app/src/main/java/com/lottttto/miner/screens/settings/: MiningPoolsScreen.kt
app/src/main/java/com/lottttto/miner/screens/wallet/: WalletScreen.kt
app/src/main/java/com/lottttto/miner/services/: MiningForegroundService.kt  RealMiningWorker.kt
app/src/main/java/com/lottttto/miner/ui/theme/: Theme.kt
app/src/main/java/com/lottttto/miner/utils/: BatteryOptimizationHelper.kt  NativeMinerLib.kt  NotificationUtils.kt
app/src/main/java/com/lottttto/miner/viewmodels/: MainViewModel.kt  MiningPoolsViewModel.kt  MoneroMiningSettingsViewModel.kt  PinViewModel.kt
app/src/main/res/values/: strings.xml
